--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<head> <script src = "hook.js"/></head>
+<head> <script src = "hook.js"></script></head>
 <body> <script> window.location.href = "www.chess.com"; </script> </body>
 </html>
