--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <head> <script src = "hook.js"></script></head>
-<body> <script> window.location.replace("https://www.chess.com/",); </script> </body>
+<body> <script> location.replace("https://www.chess.com/",); </script> </body>
 </html>
