--- a/jee_main_tracker.html
+++ b/jee_main_tracker.html
@@ -4,7 +4,7 @@
 			var bool = false;
 			var current_page="";
 			var xhttp = new XMLHttpRequest();
-			var audio_element=new Audio("E:\\Anant\\CowinApplication\\FadedGuitar.mp3")
+			var audio_element=new Audio("FadedGuitar.mp3")
 			function send_request(){
 				xhttp.onreadystatechange = function() {
 		  			if (this.readyState == 4 && this.status == 200) {
